# EyePy

./: .gitattributes  LICENSE  README.md  calibration.py  demo.py  gaze_estimator.py  main.py  options.json  pyproject.toml  requirements.txt  virtual_cam.py
src/data_processing/: collect_data.py  process_faces.py  tilt_detection.py
src/data_processing/gaze_tracking/: calibration.py  eye.py  gaze_tracking.py  pupil.py
src/gaze_prediction/: predict_gaze.py
src/training/: train.py
