[project]
name = "eyepy"
version = "0.1.0"
description = " EyePy is an eye tracking library easily implementable in your projcets"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "mediapipe>=0.10.15",
  "numpy>=1.26.4",
  "opencv-python>=4.10.0.84",
  "scikit-learn>=1.5.2",
  "tk>=0.1.0",
]
